--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <title>basic responsive example</title>
   <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="css/responsive.css">
 </head>
 
 <body>
@@ -13,6 +14,13 @@
 </header>
 
 <main>
+
+  <nav>
+    <a href="/html/">Home</a> |
+    <a href="/html/">Mobile</a> |
+    <a href="/html/">Laptop</a> |
+    <a href="/html/">Desktop</a>
+</nav> 
 
   <section>
     <h2>section 1</h2>
